fixed minor bug with svg icon container overflowing

--- a/src/sass/_svgs.scss
+++ b/src/sass/_svgs.scss
@@ -21,6 +21,8 @@
     &__icon {
         &--white {
             fill: #fff;
+            height: 3.2rem;
+            width: 3.2rem;
         }
 
         &--accent {
